correct scrollspy animation inn non visible element (accordeon) by using the refresh method.  Add margins for styling.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    margin-bottom: 3vh;
+}
+
 .accordion {
     --bs-accordion-active-bg: #ebd9f6;
+}
+
+.card {
+    margin-bottom: 1.5vh;
 }
